syntax = "proto3";
package thesixnetwork.sixnft.nftmngr;
import "nftmngr/latest/opensea_display_option.proto";
option go_package = "github.com/thesixnetwork/sixnft/x/nftmngr/types";


message DisplayOption {
  string bool_true_value = 1 ;
  string bool_false_value = 2;
  OpenseaDisplayOption opensea = 3 ;
}
