syntax = "proto3";
package sixnft.nftmngr;
import "nftmngr/attribute_definition.proto";
import "nftmngr/action.proto";
option go_package = "sixnft/x/nftmngr/types";

message OnChainData {
  bool reveal_required = 1;
  bytes reveal_secret = 2;
  repeated AttributeDefinition nft_attributes = 3; 
  repeated AttributeDefinition token_attributes = 4; 
  repeated Action actions = 5; 
}
