syntax = "proto3";
package thesixnetwork.sixnft.nftoracle;
import "nftoracle/opensea.proto";
import "nftoracle/request.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/thesixnetwork/sixnft/x/nftoracle/types";

// message action_params {
//   string name = 1;
//   string desc = 2;
//   string data_type = 3;
//   bool required = 4;
//   uint64 default_value = 5;
// }

message ActionParameter {
  string name = 1;
  string value = 2;
}

message ActionOracleParam {
  string nft_schema_code = 1;
  string token_id = 2;
  string action = 3;
  repeated ActionParameter params = 4;
  string ref_id = 5;
  google.protobuf.Timestamp expired_at = 6
   [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  string on_behalf_of = 7;
}

message ActionOracleRequest {
  uint64 id = 1;
  string nft_schema_code = 2; 
  string token_id = 3; 
  string action = 4;
  repeated ActionParameter params = 5;
  string caller = 6;
  string ref_id = 7;
  uint64 required_confirm = 8; 
  RequestStatus status = 9;
  uint64 current_confirm = 10;
  repeated string confirmers = 11;
  google.protobuf.Timestamp created_at = 12
   [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp valid_until = 13
   [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  repeated DataHash data_hashes = 14;
  int64 expired_height = 15;
  string execution_error_message = 16;
}
