syntax = "proto3";
package thesixnetwork.sixnft.nftoracle;
import "nftoracle/opensea.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/thesixnetwork/sixnft/x/nftoracle/types";

enum RequestStatus {
  PENDING = 0;
  SUCCESS_WITH_CONSENSUS = 1;
  FAILED_WITHOUT_CONCENSUS = 2;
  EXPIRED = 3;
  FAILED_ON_EXECUTION = 4;
  FAILED_REJECT_BY_CONSENSUS = 5;
}


message NftOriginData {
  string image = 1;
  string holder_address = 2;
  repeated Trait traits = 3;
}

message TransactionOriginDataInfo {
  string chain = 1;
  string tx_hash = 2;
  string block_number = 3;
  string deployer_address = 4;
}

message DataHash {
  NftOriginData origin_data = 1;
  bytes hash = 2;
  repeated string confirmers = 3;
}

message OriginTxInfo {
  TransactionOriginDataInfo transactionOriginDataInfo = 1;
  bytes hash = 2;
  repeated string confirmers = 3;
}